--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "jalaali-js": "^1.1.5",
+    "jalali-moment": "^3.3.10",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-jalali-moment": "^1.0.0",
+    "vue-moment": "^4.1.0",
+    "vue-moment-jalaali": "^2.0.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
